--- a/package.json
+++ b/package.json
@@ -1,15 +1,38 @@
 {
   "name": "contact-manager",
-  "version": "1.0.0",
-  "description": "Simple contact manager with keyboard shortcuts",
-  "main": "server.js",
+  "version": "2.0.0",
+  "description": "Contact manager with Next.js and Tailwind CSS",
   "scripts": {
-    "start": "node server.js"
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint",
+    "format": "prettier --write ."
   },
   "dependencies": {
-    "express": "^4.18.2"
+    "@tailwindcss/postcss": "^4.1.16",
+    "next": "^16.0.0",
+    "react": "^19.2.0",
+    "react-dom": "^19.2.0"
   },
-  "keywords": ["contacts", "applescript", "macos"],
+  "keywords": [
+    "contacts",
+    "applescript",
+    "macos",
+    "nextjs"
+  ],
   "author": "",
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "@types/node": "^24.9.1",
+    "@types/react": "^19.2.2",
+    "@types/react-dom": "^19.2.2",
+    "autoprefixer": "^10.4.21",
+    "eslint": "^9.38.0",
+    "eslint-config-next": "^16.0.0",
+    "postcss": "^8.5.6",
+    "prettier": "^3.6.2",
+    "tailwindcss": "^4.1.16",
+    "typescript": "^5.9.3"
+  }
 }
